BugFix: Unordered list text too small #9

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,6 @@ h1{
 
 ul{
 	line-height:2;
-	font-size:14px;
 }
 
 .container{
